[gd_scene load_steps=2 format=3 uid="uid://co6u3w2extql7"]

[ext_resource type="Script" uid="uid://cruflhv2eghqm" path="res://Scripts/LogicUI/game_over.gd" id="1_ymn2c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymn2c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -29.0
offset_right = 48.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "GAME OVER"

[node name="ScoreBoard" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Alien killed" type="Label" parent="CanvasLayer/Panel/VBoxContainer/ScoreBoard"]
layout_mode = 2
text = "Alien killed :"

[node name="Vagues" type="Label" parent="CanvasLayer/Panel/VBoxContainer/ScoreBoard"]
layout_mode = 2
text = "Vagues :"

[node name="Restart" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="MainMenu" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/MainMenu" to="." method="_on_button_pressed"]
